# grow-api-python-example

./: README.md  pyproject.toml
proto/: ps_common.proto  ps_controller_service.proto
scripts/: script_compile_proto_file.py
src/grow_api_python_example/: __init__.py  controller.py  controller_grpc_service.py  ip_util.py  main.py
